--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "standardjs": "npx standard"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "redux-devtools": "^3.7.0",
     "standard": "^17.1.0",
     "tailwindcss": "^3.4.6",
     "vite": "^5.3.4"
