--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "standardize": "npx standard --fix",
-    "standardjs": "npx standard",
-    "cy:open": "npx cypress open",
-    "cy:run": "npx cypress run"
+    "standardjs": "npx standard"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
@@ -26,7 +24,6 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "cypress": "^13.13.1",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
