--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "redux-devtools": "^3.7.0",
+    "redux-mock-store": "^1.5.4",
     "standard": "^17.1.0",
     "tailwindcss": "^3.4.6",
     "vite": "^5.3.4"
